fix overflow

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -15,21 +15,20 @@
 }
 
 .home-page_text {
-  clip-path: inset(-1px -1px -1px -1px );
   text-align: right;
-
+  overflow: hidden;
   letter-spacing: clamp(0.02em, 0.05em + 0.4vw, 1em);
   flex-basis: 32rem;
   padding-right: 2rem;
-  font-size: clamp(0.2em, 2vw + 0.5em, 1em)
+  font-size: clamp(0.2em, 2vw + 0.5em, 1em);
 }
 
 .home-nav {
-  clip-path: inset(-1px -1px -1px -1px);
   font-size: clamp(1em, 2vw + 2em, 4em);
   font-weight: 700;
   letter-spacing: 0.2em;
   flex-basis: 32rem;
+  overflow: hidden;
 }
 .list-none {
   list-style: none;
@@ -61,31 +60,33 @@
 }
 
 @media (max-width: 768px) {
-    .home-page_content {
-        flex-direction: column;
-        
-    }
-    .middle-line {
-        height: 0;
-        width: 80vw;
-    }
-    .home-page_text {
-        text-align: left;
-        padding: 0;
-        flex-basis: 0;
-        width: 80vw;
-        clip-path: none;
-        margin-bottom: 1rem;
-    }
-    .home-nav {
-        margin-top: 2rem;
-        clip-path: none;
-        flex-basis: 0;
-        width: 80vw;
-        text-align: right;
-    }
-    .home-socials {
-        left: 15vw;
-        bottom: 5vh;
-    }
+  .home-page_content {
+    flex-direction: column;
+  }
+  .middle-line {
+    height: 0;
+    width: 80vw;
+  }
+  .home-page_text {
+    text-align: left;
+    padding: 0;
+    flex-basis: 0;
+    width: 80vw;
+    clip-path: none;
+    margin-bottom: 1rem;
+  }
+  .home-nav {
+    margin-top: 2rem;
+    clip-path: none;
+    flex-basis: 0;
+    width: 80vw;
+    text-align: right;
+  }
+  .home-socials {
+    left: 15vw;
+    bottom: 5vh;
+  }
+  .home-menu_item {
+    margin-left: 0;
+  }
 }
